# wpass

./: .gitignore  Cargo.toml  readme.md
config/: config.toml.example
hack/: install.bat  release.bat  test.bat
lib/: extract.rs  hack.rs  lib.rs
src/: extract.rs  lib.rs  main.rs  mod.rs  password.rs
test/: dict.txt
wpass-cli/: cargo.toml  readme.md
wpass-cli/src/: hack.rs  main.rs
