[package]
name = "wpass"
version = "0.1.0"
edition = "2021"
authors = ["AsterNight <asternight@outlook.com>"]

[workspace]
members = ["wpass-cli"]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
rayon = "1.5"
encoding = "0.2"